<resources>
    <!--IMC App-->
    <string name="app_name">daigualApps</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Recalcular</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <!--BoardgamesApp-->
    <string name="boargames">Juegos de mesa</string>
    <string name="categories">Categorías</string>
    <string name="games">Juegos</string>
    <string name="dialog_add_game">Añade un juego</string>
    <string name="dialog_cooperative_category">Cooperativos</string>
    <string name="dialog_deckbuilding_category">Deckbuilding</string>
    <string name="dialog_legacy_category">Legacy</string>
    <string name="dialog_euro_category">Eurogames</string>
    <string name="dialog_lcg_category">Living Card Games</string>
    <string name="dialog_newgame_button">Nuevo juego</string>

    <!--ColorsApp-->
    <string name="tvH1">H1 (20%)</string>
    <string name="tvH2">H2 (50%)</string>
    <string name="tvH3">H3 (80%)</string>
    <string name="tvV1">V1 (20%)</string>
    <string name="tvV2">V2 (35%)</string>
    <string name="tvV3">V3 (50%)</string>
    <string name="tvV4">V4 (65%)</string>
    <string name="tvV5">V5 (80%)</string>
    <string name="white">Blanco</string>
    <string name="red">Rojo</string>
    <string name="orange">Naranja</string>
    <string name="yellow">Amarillo</string>
    <string name="green">Verde</string>
    <string name="cyan">Cián</string>
    <string name="blue">Azul</string>
    <string name="violet">Violeta</string>
    <string name="black">Negro</string>



    <string name="blanco">Blanco</string>
    <string name="rojo">Rojo</string>
    <string name="naranja">Naranja</string>
    <string name="amarillo">Amarillo</string>
    <string name="verde">Verde</string>
    <string name="cian">Cián</string>
    <string name="azul">Azul</string>
    <string name="violeta">Violeta</string>
    <string name="gris">Gris</string>
    <string name="negro">Negro</string>
</resources>