<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#9C27B0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepasoApp.RepasoActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv1"
            style="@style/repaso"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:text="@string/blanco"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv2"
                style="@style/repaso"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:background="@color/rojo"
                android:text="@string/rojo"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv3"
                        style="@style/repaso"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/naranja"
                        android:text="@string/naranja"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv4"
                        style="@style/repaso"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/amarillo"
                        android:text="@string/amarillo"
                        android:textColor="@color/black" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv5"
                    style="@style/repaso"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:background="@color/verde"
                    android:text="@string/verde"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv6"
                    style="@style/repaso"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:background="@color/cian"
                    android:text="@string/cian"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv7"
                        style="@style/repaso"
                        android:layout_width="100dp"
                        android:layout_height="200dp"
                        android:background="@color/azul"
                        android:text="@string/azul"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv8"
                        style="@style/repaso"
                        android:layout_width="100dp"
                        android:layout_height="200dp"
                        android:background="@color/violeta"
                        android:text="@string/violeta"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="300dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv9"
                    style="@style/repaso"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:background="@color/gris"
                    android:text="@string/gris"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv10"
                    style="@style/repaso"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/negro"
                    android:text="@string/negro"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>