<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitleColors"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/background_fab"
        android:gravity="center"
        android:text="Paleta de colores"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvH1"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        app:cardBackgroundColor="@color/red20"
        app:layout_constraintBottom_toTopOf="@id/cvH2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleColors">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/tvH1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvH2"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginHorizontal="32dp"
        app:cardBackgroundColor="@color/violet50"
        app:layout_constraintBottom_toTopOf="@id/cvH3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvH1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/tvH2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvH3"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="64dp"
        app:cardBackgroundColor="@color/blue80"
        app:layout_constraintBottom_toTopOf="@id/btnChangeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvH2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/tvH3"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleColors" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnChangeColor"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/background_fab"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Cambiar color"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>